force-app/main/default/objects/Product2/fields/Cost_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Person__c</fullName>
    <label>Cost Per Person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>