force-app/main/default/objects/Product2/fields/IsExternal__c.field-meta.xml
<CustomField>
    <fullName>IsExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used in integration allow to determine if product was created in this org or was saved from external source.</description>
    <label>External</label>
    <type>Checkbox</type>
</CustomField>