force-app/main/default/objects/Product2/validationRules/Base_price_not_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_price_not_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Base_Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Base_Price__c</errorDisplayField>
    <errorMessage>Complete this field with a positive amount.</errorMessage>
</ValidationRule>