force-app/main/default/objects/Product2/validationRules/Cannot_edit_External_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_External_ID</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
!ISNEW(),
ISCHANGED( ExternalId__c )
)</errorConditionFormula>
    <errorMessage>External ID can not be edited.</errorMessage>
</ValidationRule>