force-app/main/default/objects/Product2/validationRules/Capacity_at_least_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_at_least_1</fullName>
    <active>true</active>
    <description>Maximum number of people for whom the service is intended</description>
    <errorConditionFormula>Capacity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Capacity__c</errorDisplayField>
    <errorMessage>Complete this field with a positive number.</errorMessage>
</ValidationRule>