force-app/main/default/objects/Product2/validationRules/Cost_per_person_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Cost_per_person_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Cost_Per_Person__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Cost_Per_Person__c</errorDisplayField>
    <errorMessage>Complete this field with a positive amount.</errorMessage>
</ValidationRule>