force-app/main/default/objects/Product2/validationRules/External_checkbox_can_not_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>External_checkbox_can_not_be_edited</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED( IsExternal__c )
)</errorConditionFormula>
    <errorDisplayField>IsExternal__c</errorDisplayField>
    <errorMessage>This field can not be updated.</errorMessage>
</ValidationRule>